--- a/LAB-4-2.ipynb
+++ b/LAB-4-2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "fb13db26",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "0d838415",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "ee4bd1e0",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "2efc75ef",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "4  SHLoadNonloadedIconOverlayIdentifiers,VarUI8Fr...  Virus  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "f97a63bd",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "       'Crypt'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "68800f3e",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "a6c3ebe3",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,8 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e029b0a9",
+   "execution_count": 22,
+   "id": "d2d78330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,8 +292,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "16681aea",
+   "execution_count": 27,
+   "id": "b1e91df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "ds['class'] = le.fit_transform(ds['class'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "203364a9",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +385,7 @@
        "4  SHLoadNonloadedIconOverlayIdentifiers,VarUI8Fr...     1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +418,444 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "fec64276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Balanceo de datos\n",
+    "\n",
+    "features = ds.loc[:, ds.columns != 'class']\n",
+    "target = ds[\"class\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "dd38a60e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4918</td>\n",
+       "      <td>1251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3124</td>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9465</td>\n",
+       "      <td>2525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2043</td>\n",
+       "      <td>2265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83</td>\n",
+       "      <td>2145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9779</th>\n",
+       "      <td>2260</td>\n",
+       "      <td>1627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9780</th>\n",
+       "      <td>3255</td>\n",
+       "      <td>2077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9781</th>\n",
+       "      <td>8438</td>\n",
+       "      <td>2737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9782</th>\n",
+       "      <td>7908</td>\n",
+       "      <td>1218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9783</th>\n",
+       "      <td>7262</td>\n",
+       "      <td>2321</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9784 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0     1\n",
+       "0     4918  1251\n",
+       "1     3124   604\n",
+       "2     9465  2525\n",
+       "3     2043  2265\n",
+       "4       83  2145\n",
+       "...    ...   ...\n",
+       "9779  2260  1627\n",
+       "9780  3255  2077\n",
+       "9781  8438  2737\n",
+       "9782  7908  1218\n",
+       "9783  7262  2321\n",
+       "\n",
+       "[9784 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Balanceo de datos\n",
+    "\n",
+    "f_ds = pd.DataFrame(features,dtype=str)\n",
+    "f_ds.apply(le.fit_transform)\n",
+    "\n",
+    "f_ds = pd.DataFrame(f_ds.apply(le.fit_transform).values[:,:])\n",
+    "f_ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "eb5494c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Balanceo de datos\n",
+    "\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "oversample = SMOTE(sampling_strategy = {0: 6153, 1: 2367, 2: 447, 3: 441, 4: 222, 5: 102, 6: 31, 7: 11, 8: 10})\n",
+    "\n",
+    "X, y = oversample.fit_resample(f_ds, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "76923a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.502709</td>\n",
+       "      <td>0.420929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.319329</td>\n",
+       "      <td>0.203230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.967495</td>\n",
+       "      <td>0.849596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.208832</td>\n",
+       "      <td>0.762113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.008484</td>\n",
+       "      <td>0.721736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9779</th>\n",
+       "      <td>0.231013</td>\n",
+       "      <td>0.547443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9780</th>\n",
+       "      <td>0.332720</td>\n",
+       "      <td>0.698856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9781</th>\n",
+       "      <td>0.862517</td>\n",
+       "      <td>0.920929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9782</th>\n",
+       "      <td>0.808341</td>\n",
+       "      <td>0.409825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9783</th>\n",
+       "      <td>0.742308</td>\n",
+       "      <td>0.780956</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9784 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0         1\n",
+       "0     0.502709  0.420929\n",
+       "1     0.319329  0.203230\n",
+       "2     0.967495  0.849596\n",
+       "3     0.208832  0.762113\n",
+       "4     0.008484  0.721736\n",
+       "...        ...       ...\n",
+       "9779  0.231013  0.547443\n",
+       "9780  0.332720  0.698856\n",
+       "9781  0.862517  0.920929\n",
+       "9782  0.808341  0.409825\n",
+       "9783  0.742308  0.780956\n",
+       "\n",
+       "[9784 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Balanceo de datos\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(X)\n",
+    "\n",
+    "f_ds = pd.DataFrame(scaler.transform(X))\n",
+    "f_ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a481554",
+   "metadata": {},
+   "source": [
+    "#### Construccion de Modelos\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Se implementaron dos modelos distintos a los que se utilizaron en el articulo “*New Datasets for Dinamyc Malware Classification*”."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "dd071447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split train and test datasets\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(f_ds, y, test_size=0.3, random_state=22)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d683d5c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decision Tree\n",
+    "\n",
+    "from sklearn import tree\n",
+    "clf_decision_tree = tree.DecisionTreeClassifier()\n",
+    "clf_decision_tree.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "60870ccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prediction\n",
+    "\n",
+    "predict_test = clf_decision_tree.predict(x_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b1592955",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8719346049046321"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy of Decision Tree\n",
+    "metrics.accuracy_score(predict_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fc0013fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.92      0.91      1858\n",
+      "           1       0.87      0.86      0.86       707\n",
+      "           2       0.82      0.86      0.84       118\n",
+      "           3       0.67      0.66      0.66       137\n",
+      "           4       0.59      0.61      0.60        69\n",
+      "           5       0.48      0.42      0.45        31\n",
+      "           6       0.31      0.50      0.38         8\n",
+      "           7       0.00      0.00      0.00         4\n",
+      "           8       0.00      0.00      0.00         4\n",
+      "\n",
+      "    accuracy                           0.87      2936\n",
+      "   macro avg       0.52      0.54      0.52      2936\n",
+      "weighted avg       0.87      0.87      0.87      2936\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import *\n",
+    "# Confusion Matrix\n",
+    "\n",
+    "print(classification_report(y_test, predict_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5ce63bbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.87883212, 0.88467153, 0.87883212, 0.86423358, 0.87153285,\n",
+       "       0.86277372, 0.85985401, 0.84671533, 0.86695906, 0.87573099])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cross-validation\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "cv = KFold(n_splits=10, random_state=1, shuffle=True)\n",
+    "\n",
+    "# evaluate model\n",
+    "cross_val_score(clf_decision_tree, x_train, y_train, scoring='accuracy', cv=cv, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec4d1f5",
+   "metadata": {},
+   "source": [
+    "##### Resultados Decision Tree: \n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0e970a97",
+   "id": "70f0d47a",
    "metadata": {},
    "outputs": [],
    "source": []
