--- a/LAB-4-2.ipynb
+++ b/LAB-4-2.ipynb
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d2d78330",
+   "id": "a5080035",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b1e91df1",
+   "id": "1955b3a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "203364a9",
+   "id": "6d0619ae",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "fec64276",
+   "id": "27a444fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dd38a60e",
+   "id": "d93e8cf2",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "eb5494c3",
+   "id": "2525428c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "76923a8a",
+   "id": "01dd38fe",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a481554",
+   "id": "a7bf16cf",
    "metadata": {},
    "source": [
     "#### Construccion de Modelos\n",
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "dd071447",
+   "id": "e811d14e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d683d5c8",
+   "id": "7a7767cb",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "60870ccd",
+   "id": "55d1358d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b1592955",
+   "id": "e1e1302f",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fc0013fa",
+   "id": "2cf65399",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5ce63bbf",
+   "id": "db8bf615",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ec4d1f5",
+   "id": "e4764460",
    "metadata": {},
    "source": [
     "##### Resultados Decision Tree: \n",
@@ -854,8 +854,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "id": "d2ec0dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB()"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Naive Bayes\n",
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "naive_bayes = MultinomialNB()\n",
+    "naive_bayes.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "272c46d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prediction\n",
+    "\n",
+    "predict_test = naive_bayes.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "e2a69e82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6328337874659401"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy\n",
+    "\n",
+    "metrics.accuracy_score(predict_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "986edbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.63      1.00      0.78      1858\n",
+      "           1       0.00      0.00      0.00       707\n",
+      "           2       0.00      0.00      0.00       118\n",
+      "           3       0.00      0.00      0.00       137\n",
+      "           4       0.00      0.00      0.00        69\n",
+      "           5       0.00      0.00      0.00        31\n",
+      "           6       0.00      0.00      0.00         8\n",
+      "           7       0.00      0.00      0.00         4\n",
+      "           8       0.00      0.00      0.00         4\n",
+      "\n",
+      "    accuracy                           0.63      2936\n",
+      "   macro avg       0.07      0.11      0.09      2936\n",
+      "weighted avg       0.40      0.63      0.49      2936\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jfdel\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning:\n",
+      "\n",
+      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n",
+      "C:\\Users\\jfdel\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning:\n",
+      "\n",
+      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n",
+      "C:\\Users\\jfdel\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning:\n",
+      "\n",
+      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confusion Matriz\n",
+    "print(classification_report(y_test, predict_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "1862986a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.60583942, 0.63649635, 0.62481752, 0.63357664, 0.63211679,\n",
+       "       0.64963504, 0.60875912, 0.62189781, 0.63304094, 0.62573099])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cross-validation\n",
+    "cv = KFold(n_splits=10, random_state=1, shuffle=True)\n",
+    "\n",
+    "# evaluate model\n",
+    "cross_val_score(naive_bayes, x_train, y_train, scoring='accuracy', cv=cv, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bac2f95",
+   "metadata": {},
+   "source": [
+    "##### Resultados Naive Bayes: \n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e21104f3",
+   "metadata": {},
+   "source": [
+    "El  artículo  “New  Datasets  for  Dinamyc  Malware  Classification”  sirve  como  un  benchmark  para \n",
+    "comparar modelos de clasificación, \n",
+    "\n",
+    "* ¿se lograron obtener mejores métricas que las obtenidas en el artículo para la clasificación de malware? \n",
+    "  \n",
+    "  RESPUESTA:"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "70f0d47a",
+   "id": "05697c6b",
    "metadata": {},
    "outputs": [],
    "source": []
