--- a/LAB-4-2.ipynb
+++ b/LAB-4-2.ipynb
@@ -847,7 +847,7 @@
    "metadata": {},
    "source": [
     "##### Resultados Decision Tree: \n",
-    "\n",
+    "- En este caso el que ha tenido mayor eficacia con respecto a la precision y recall ha sido el troyano con una accuracy de mas o menos 0.8 a diferencia del Naive Bayes ya que se tienen metricas altas para los otros malware.\n",
     "---\n",
     "\n"
    ]
@@ -997,7 +997,7 @@
    "metadata": {},
    "source": [
     "##### Resultados Naive Bayes: \n",
-    "\n",
+    "- Ahora con respecto a este modelo se tiene un accuracy de 0.63. Asi como el anterior modelo el malware con mayor precision, recall y fi-score ha sido el troyano, sus metricas se quedan en 0.\n",
     "---\n",
     "\n"
    ]
@@ -1012,7 +1012,8 @@
     "\n",
     "* ¿se lograron obtener mejores métricas que las obtenidas en el artículo para la clasificación de malware? \n",
     "  \n",
-    "  RESPUESTA:"
+    "  RESPUESTA:\n",
+    "  - No se han logrado obtener el resultado mas alto que el articulo mencionado, aunque tambien en los dos modelos se ha podido evidenciar de que el malware troyano ha sido el que ha tenido mejores metricas, en el articulo fueron otros concretamente backdoor, agent y worms, para igualarnos al articulo se debe de aumentar las metricas de ellos utilizando una separacion de datos para un valid set."
    ]
   },
   {
